Fix styling issues with scrollbars

--- a/src/components/List/style.scss
+++ b/src/components/List/style.scss
@@ -1,9 +1,17 @@
+.List {
+  width: 100%;
+  overflow: hidden;
+}
+
 .List__list-items {
   display: block;
   margin: 0;
   padding: 0;
   max-height: 507px;
+  width: 100%;
+  padding-right: $x6;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .List--hasCompleted .List__list-items {
