--- a/src/components/Todo/style.scss
+++ b/src/components/Todo/style.scss
@@ -3,6 +3,7 @@
   background: #fff;
   border-bottom: 1px solid $steam;
   padding: $x6;
+  width: 91%;
 }
 
 .Todo__input {
